# agent-integration

./: .eslintignore  .gitignore  .markdownlintignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: pre.json  tidy-bags-eat.md  tough-wolves-sparkle.md
.github/actions/run-ci/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  release-rc.yml  release-stable.yml
scripts/korean-noun-dictionary/: .gitignore  CHANGELOG.md  NOTICE.md  README.md  justfile  package.json  pyproject.toml
scripts/korean-noun-dictionary/src/korean_noun_dictionary/: main.py
scripts/korean-noun-dictionary/test/: test_main.py
scripts/korean-noun-dictionary/test/resources/: expected_output.json  sample1.txt  sample2.txt
